# kotify

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  SECURITY.md  alembic.ini  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml  web.yml
.playwright-mcp/: page-2026-04-16T13-01-21-402Z.yml  page-2026-04-16T13-02-01-169Z.yml  page-2026-04-16T13-03-17-951Z.yml  page-2026-04-16T13-04-23-011Z.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_message_ncp_request_id_index.py  0003_contacts_and_groups.py  0004_remove_timeout_status.py  0005_add_reservation_fields.py  0006_add_attachments.py  0006_msghub_migration.py  0007_msghub_migration.py  0008_mo_messages.py  0009_mo_reply_id_fields.py  0010_user_display_name.py  0011_campaign_idempotency_key.py  0012_thread_reads.py  0013_normalize_phone_digits.py  0014_messages_to_number_index.py  0015_normalize_mo_callback.py  0016_normalize_messages_to_number.py
app/: config.py  db.py  i18n.py  main.py  models.py  web.py
app/auth/: deps.py  oidc.py  session.py
app/msghub/: auth.py  client.py  codes.py  schemas.py
app/ncp/: client.py  codes.py  signature.py
app/routes/: admin.py  audit_api.py  auth.py  campaigns.py  chat.py  compose.py  contacts.py  dashboard.py  groups.py  health.py  hiworks.py  notifications.py  numbers.py  pages.py  reports.py  search.py  settings.py  setup.py  threads.py  webhook.py
app/security/: crypto.py  csrf.py  settings_store.py
app/services/: audit.py  (+13 more)
claudedocs/: E2E-CHECKLIST.md  SPEC.md  code-review-plan.md  motion-timing.md  msghub-api-guide.md  msghub-error-codes.md  msghub-migration-spec.md  msghub-template-api.md  msghub-ux-changes.md  ncp-mailer-research.md  ncp-research.md  phase-10d-runtime-audit.md  reservation-mms-todo.md  web-bundle-snapshot.md
deploy/: README.md  ct-bootstrap.sh  kotify-backup.cron  kotify-backup.sh  kotify-sudoers  kotify-update-worker.sh  kotify-update.sh  kotify-web.service  kotify.service  npm-config.md  sms-backup.cron  sms-backup.sh  sms.service
tests/: conftest.py  test_campaign_cancel.py  test_campaign_idempotency.py  test_chat_events.py  test_codes.py  test_compose_service.py  test_compose_with_groups.py  test_contact_phone_normalization.py  test_contacts.py  test_cost_pricing.py  test_create_all_guard.py  test_csrf.py  test_csrf_integration.py  test_csv_import.py  test_csv_import_batch.py  test_csv_import_savepoint.py  test_csv_injection.py  test_dashboard_kst.py  test_dispatch_channel.py  test_dispatch_chunking.py  test_dispatch_counters.py  test_dispatch_ratelimit.py  test_groups.py  test_hiworks.py  test_i18n.py  test_kst_filter.py  test_mms.py  test_mo_webhook.py  test_msghub_schemas.py  test_notify_n8n.py  test_phone.py  test_pii_masking.py  test_poller.py  test_poller_transactions.py  test_progress_fragment.py  test_recipient_limit.py  test_reconcile.py  test_reply_validation.py  test_report_matching.py  test_reservation.py  (+11 more)
web/: .eslintrc.json  .gitignore  middleware.ts  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  vitest.config.ts  vitest.setup.ts
(+237 files in other folders)
