[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "deploy*", "alembic*", "claudedocs*"]

[project]
name = "ncp-sms-system"
version = "0.1.0"
description = "Internal SMS announcement system using NCP SENS"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "authlib>=1.4",
    "httpx>=0.28",
    "itsdangerous>=2.2",
    "cryptography>=44.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
