[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "deploy*", "alembic*", "claudedocs*"]

[project]
name = "kotify"
version = "0.1.0"
description = "Korean broadcast notification system powered by Naver Cloud Platform"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "RAVNUS Inc." }]
keywords = ["sms", "rcs", "broadcast", "notification", "msghub", "uplus", "korea", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Korean",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "authlib>=1.4",
    "httpx>=0.28",
    "itsdangerous>=2.2",
    "cryptography>=44.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.6",
    "pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/RAVNUS-INC/kotify"
Repository = "https://github.com/RAVNUS-INC/kotify"
Issues = "https://github.com/RAVNUS-INC/kotify/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.8",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",  # line too long (formatting)
    "B008",  # FastAPI Depends() in defaults is the idiomatic pattern
    "E402",  # app/main.py intentionally orders imports around middleware
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841"]  # tests may capture exceptions for inspection

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
